--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     
     /* Imagem de fundo */
-    background: url('./Captura\ de\ tela\ 2024-09-11\ 151223.png') no-repeat center center fixed;
+    background: url('../Captura\ de\ tela\ 2024-09-11\ 151223.png') no-repeat center center fixed;
     background-size: cover; /* Garante que a imagem cubra toda a tela */
     background-position: center; /* Centraliza a imagem */
 }
